# Tesseract

./: .gitignore  Cargo.toml  README.md
docs/: README.md
src/: lib.rs  main.rs
src/core/: error.rs  mod.rs  types.rs
src/models/: decision_stump.rs  decision_tree.rs  knn.rs  mod.rs
src/optimizers/: mod.rs
src/preprocessors/: mod.rs
tesseract/: Cargo.toml
tesseract-core/: Cargo.toml
tesseract-core/src/: error.rs  impurity.rs  lib.rs  types.rs
tesseract-datasets/: Cargo.toml
tesseract-datasets/src/: lib.rs
tesseract-io/: Cargo.toml
tesseract-io/src/: lib.rs
tesseract-metrics/: Cargo.toml
tesseract-models/: Cargo.toml
tesseract-models/benches/: model_benchmarks.rs
tesseract-models/src/: cnn.rs  decision_stump.rs  decision_tree.rs  k_means.rs  k_medians.rs  knn.rs  lib.rs  linear_regression.rs  logistic_regression.rs  naive_bayes.rs  neural_network.rs  random_tree.rs
tesseract-optimizers/: Cargo.toml
tesseract-preprocessors/: Cargo.toml
tesseract/src/: lib.rs
