[workspace]
members = [
  "tesseract",
  "tesseract-core", "tesseract-datasets",
  "tesseract-io",
  "tesseract-metrics",
  "tesseract-models",
  "tesseract-optimizers",
  "tesseract-preprocessors",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A machine learning library written in Rust."
license = "MIT"

[workspace.dependencies]
nalgebra = "0.34"
csv = "1.4"
rand = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8"
