[package]
name = "tesseract-models"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tesseract-core = { path = "../tesseract-core" }
rand = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
rkyv = { workspace = true }
criterion = { workspace = true }

[features]
default = ["rng"]
rng = ["dep:rand"]
parallel = ["dep:rayon"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]

[[bench]]
name = "model_benchmarks"
harness = false
