[package]
name = "tesseract"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
tesseract-core = { path = "../tesseract-core" }
tesseract-io = { path = "../tesseract-io", default-features = true }
tesseract-metrics = { path = "../tesseract-metrics" }
tesseract-models = { path = "../tesseract-models", default-features = true }
tesseract-optimizers = { path = "../tesseract-optimizers" }
tesseract-preprocessors = { path = "../tesseract-preprocessors" }

[features]
default = ["io-csv", "rng"]
io-csv = ["tesseract-io/io-csv"]
rng = ["tesseract-models/rng"]
parallel = ["tesseract-models/parallel", "tesseract-metrics/parallel"]
serde = ["tesseract-models/serde", "tesseract-io/serde"]
rkyv = ["tesseract-models/rkyv"]
